Added Metas and Updated README.md

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="title" content="6nmd.us" />
+    <meta name="og:title" content="6nmd.us" />
+    <meta name="image" content="https://6nmd.us/logo.png" />
+    <meta name="og:image" content="https://6nmd.us/logo.png" />
+    <meta name="description" content="A simple URL shortener." />
+    <meta name="og:description" content="A simple URL shortener." />
+    <meta name="robots" content="index, follow" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
